@@ -1,3 +1,6 @@
+2214.	[bug]		Deregister OpenSSL lock callback when cleaning
+			up. [RT #17098]
+
 2213.	[bug]		SIG0 diagnostic failure messages were looking at the
 			wrong status code. [RT #17101]
 
